--- a/model_test_1.ipynb
+++ b/model_test_1.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\saiko\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import transformers\n",
     "from transformers import BertTokenizer,BertModel\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sentence_transformers import SentenceTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,100 +69,187 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.1</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>What is the role of a prototype program in pro...</td>\n",
        "      <td>To simulate the behaviour of portions of the d...</td>\n",
        "      <td>High risk problems are address in the prototyp...</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.5</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.1</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>What is the role of a prototype program in pro...</td>\n",
        "      <td>To simulate the behaviour of portions of the d...</td>\n",
        "      <td>To simulate portions of the desired final prod...</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.1</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>What is the role of a prototype program in pro...</td>\n",
        "      <td>To simulate the behaviour of portions of the d...</td>\n",
        "      <td>A prototype program simulates the behaviors of...</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>4.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.1</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>What is the role of a prototype program in pro...</td>\n",
        "      <td>To simulate the behaviour of portions of the d...</td>\n",
        "      <td>Defined in the Specification phase a prototype...</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.1</td>\n",
+       "      <td>1.10</td>\n",
        "      <td>What is the role of a prototype program in pro...</td>\n",
        "      <td>To simulate the behaviour of portions of the d...</td>\n",
        "      <td>It is used to let the users have a first idea ...</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2268</th>\n",
+       "      <td>12.11</td>\n",
+       "      <td>How many steps does it take to search a node i...</td>\n",
+       "      <td>The height of the tree.</td>\n",
+       "      <td>log n</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>4.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2269</th>\n",
+       "      <td>12.11</td>\n",
+       "      <td>How many steps does it take to search a node i...</td>\n",
+       "      <td>The height of the tree.</td>\n",
+       "      <td>( n(n-1) ) / 2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>1.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2270</th>\n",
+       "      <td>12.11</td>\n",
+       "      <td>How many steps does it take to search a node i...</td>\n",
+       "      <td>The height of the tree.</td>\n",
+       "      <td>2n-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>2.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2271</th>\n",
+       "      <td>12.11</td>\n",
+       "      <td>How many steps does it take to search a node i...</td>\n",
+       "      <td>The height of the tree.</td>\n",
+       "      <td>it takes at most h steps, where h is the heigh...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2272</th>\n",
+       "      <td>12.11</td>\n",
+       "      <td>How many steps does it take to search a node i...</td>\n",
+       "      <td>The height of the tree.</td>\n",
+       "      <td>it depends on the install search tree then fro...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>1.500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2273 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id                                           question  \\\n",
-       "0  1.1  What is the role of a prototype program in pro...   \n",
-       "1  1.1  What is the role of a prototype program in pro...   \n",
-       "2  1.1  What is the role of a prototype program in pro...   \n",
-       "3  1.1  What is the role of a prototype program in pro...   \n",
-       "4  1.1  What is the role of a prototype program in pro...   \n",
+       "         id                                           question  \\\n",
+       "0      1.10  What is the role of a prototype program in pro...   \n",
+       "1      1.10  What is the role of a prototype program in pro...   \n",
+       "2      1.10  What is the role of a prototype program in pro...   \n",
+       "3      1.10  What is the role of a prototype program in pro...   \n",
+       "4      1.10  What is the role of a prototype program in pro...   \n",
+       "...     ...                                                ...   \n",
+       "2268  12.11  How many steps does it take to search a node i...   \n",
+       "2269  12.11  How many steps does it take to search a node i...   \n",
+       "2270  12.11  How many steps does it take to search a node i...   \n",
+       "2271  12.11  How many steps does it take to search a node i...   \n",
+       "2272  12.11  How many steps does it take to search a node i...   \n",
        "\n",
-       "                                      desired_answer  \\\n",
-       "0  To simulate the behaviour of portions of the d...   \n",
-       "1  To simulate the behaviour of portions of the d...   \n",
-       "2  To simulate the behaviour of portions of the d...   \n",
-       "3  To simulate the behaviour of portions of the d...   \n",
-       "4  To simulate the behaviour of portions of the d...   \n",
+       "                                         desired_answer  \\\n",
+       "0     To simulate the behaviour of portions of the d...   \n",
+       "1     To simulate the behaviour of portions of the d...   \n",
+       "2     To simulate the behaviour of portions of the d...   \n",
+       "3     To simulate the behaviour of portions of the d...   \n",
+       "4     To simulate the behaviour of portions of the d...   \n",
+       "...                                                 ...   \n",
+       "2268                            The height of the tree.   \n",
+       "2269                            The height of the tree.   \n",
+       "2270                            The height of the tree.   \n",
+       "2271                            The height of the tree.   \n",
+       "2272                            The height of the tree.   \n",
        "\n",
-       "                                      student_answer  score_me  score_other  \\\n",
-       "0  High risk problems are address in the prototyp...       4.0          3.0   \n",
-       "1  To simulate portions of the desired final prod...       5.0          5.0   \n",
-       "2  A prototype program simulates the behaviors of...       5.0          3.0   \n",
-       "3  Defined in the Specification phase a prototype...       5.0          5.0   \n",
-       "4  It is used to let the users have a first idea ...       3.0          3.0   \n",
+       "                                         student_answer  score_me  \\\n",
+       "0     High risk problems are address in the prototyp...       4.0   \n",
+       "1     To simulate portions of the desired final prod...       5.0   \n",
+       "2     A prototype program simulates the behaviors of...       5.0   \n",
+       "3     Defined in the Specification phase a prototype...       5.0   \n",
+       "4     It is used to let the users have a first idea ...       3.0   \n",
+       "...                                                 ...       ...   \n",
+       "2268                                              log n       4.5   \n",
+       "2269                                     ( n(n-1) ) / 2       0.0   \n",
+       "2270                                               2n-1       0.0   \n",
+       "2271  it takes at most h steps, where h is the heigh...       5.0   \n",
+       "2272  it depends on the install search tree then fro...       0.0   \n",
        "\n",
-       "   score_avg  \n",
-       "0        3.5  \n",
-       "1        5.0  \n",
-       "2        4.0  \n",
-       "3        5.0  \n",
-       "4        3.0  "
+       "      score_other  score_avg  \n",
+       "0            3.00      3.500  \n",
+       "1            5.00      5.000  \n",
+       "2            3.00      4.000  \n",
+       "3            5.00      5.000  \n",
+       "4            3.00      3.000  \n",
+       "...           ...        ...  \n",
+       "2268         5.00      4.750  \n",
+       "2269         3.00      1.500  \n",
+       "2270         4.75      2.375  \n",
+       "2271         5.00      5.000  \n",
+       "2272         3.00      1.500  \n",
+       "\n",
+       "[2273 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +271,7 @@
        ")>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
